# Scalable-cToken

./: .cspell.json  .env  .env.example  ARCHITECTURE.md  COMMON_ERRORS.md  DEMO_SCRIPT.md  PRESENTATION.md  README.md  REFERRAL-SYSTEM.md  TOKEN_CREATION_FIXES.md  TROUBLESHOOTING_GUIDE.md  add-more-sol.js  admin-wallet-info.txt  check-balance.js  create-env.js  cspell.json  fund-admin-wallet.js  fund-wallet.js  generate-keypair.js  new_admin_keypair.json  next.config.js  next.config.mjs  optimize-token-creation.js  package-lock.json  package.json  setup-dev-environment.js  tailwind.config.ts  test-token-api.js  test-token-creation.js  tsconfig.json  update-env.js  update-rpc-endpoint.js  use-test-admin-wallet.js  vercel.json
ctoken-pop/: package-lock.json  package.json
ctoken-pop/src/app/: layout.tsx  page.tsx
ctoken-pop/src/lib/: constants.ts
docs/: ARCHITECTURE.md  COMMON_ERRORS.md  TOKEN_CREATION_ERROR.md  TROUBLESHOOTING_GUIDE.md
scripts/: add-min-sol.js  create-env.js  derive-public-key.js  fix-token-creation.js  fund-admin-wallet-alternative.js  fund-admin-wallet.js  init-state-tree.js  optimize-api.js  optimize-token-creation.js  setup-admin-wallet.js  update-rpc-endpoint.js
solana-program/: Cargo.toml
solana-program/src/: lib.rs
src/: README.md
src/app/: globals.css  layout.tsx  page.tsx
src/app/admin/: page.tsx
src/app/claim/: page.tsx
src/app/dashboard/: page.tsx
src/app/docs/: page.tsx
src/app/integration-test/: page.tsx
src/lib/: constants.ts  types.ts
src/styles/: wallet-adapter-overrides.css
src/types/: ui-components.d.ts
(+90 files in other folders)
