[package]
name = "droploop-referral"
version = "0.1.0"
edition = "2021"
description = "Solana program for Droploop referral system with ZK Compression"
authors = ["Droploop Team"]

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.16.0"
borsh = "0.10.3"
thiserror = "1.0.40"
light-protocol-program = { version = "0.1.0", optional = true }

[lib]
crate-type = ["cdylib", "lib"]
